# moai-dev

./: .gitattributes
ant/: make-host.sh
ant/host-source/: d.run-host.sh
ant/host-source/source/project/: AndroidManifest.xml
ant/host-source/source/project/src/app/: MoaiActivity.java
ant/host-source/source/project/src/moai/: LinearLayoutIMETrap.java  Moai.java  MoaiKeyboard.java
ant/host-source/source/project/src/moai/chartboost/: MoaiChartBoost.java
ant/libmoai/jni/: Android.mk
ant/libmoai/jni/moaiext-android/: Android.mk
ant/libmoai/jni/src/: moai.cpp
cmake/: CMakeLists.txt  build-blackberry.sh
cmake/blackberry-host/: CMakeLists.txt
cmake/http-host/: CMakeLists.txt
cmake/zlcore/: CMakeLists.txt
distribute/: make-sdk.sh
distribute/moai-sdk/hosts/xcode/ios/moai.xcodeproj/: project.pbxproj
eclipse/android-project/: moai-target
eclipse/android-project/src/com/getmoai/samples/: MoaiSample.java  MoaiView.java
eclipse/libmoai/jni/: Android.mk  libcurl.mk  libmoaicore.mk  libuslsext.mk
flascc/zlcore/: CMakeLists.txt
nacl/moai/: FileCache.cpp  FileCache.h  MOAIApp.cpp  NaClFile.cpp  NaClFile.h  NaClFileSystem.cpp  NaClFileSystem.h  build.scons  geturl_handler.cc  geturl_handler.h  manifest.json  moai.cc  moai.html  moai_nacl.h  opengl_context.cc  opengl_context.h  scons.bat  test.lua
samples/android/app-keyboard/: main.lua
samples/basics/anim-basic/: Functions.txt
samples/basics/polygonDeck/: main.lua
samples/flash/jsfl/: tests.jsfl
samples/test/grid/: main.lua
samples/test/transform/: main.lua
src/aku/: AKU-chartboost.mm  AKU-debugger.h  AKU-fmod.cpp  AKU-iphone.mm  AKU.cpp  AKU.h
src/hosts/: GlutHost.cpp
src/hosts/BlackBerry10/: bar-descriptor.xml
src/hosts/BlackBerry10/src/: main.cpp
src/lua-modules/: apsalar.lua
src/moai-lua-5.1.3/src/: lauxlib.c
src/moai-sim/: MOAIEnvironment.cpp  MOAITextDesigner.cpp
src/moaicore/: MOAIBox2DArbiter.cpp  MOAIBox2DBody.cpp  MOAIBox2DDebugDraw.cpp  MOAIBox2DDistanceJoint.cpp  MOAIBox2DFixture.cpp  MOAIBox2DFrictionJoint.cpp  MOAIBox2DGearJoint.cpp  MOAIBox2DJoint.cpp  MOAIBox2DMouseJoint.cpp  MOAIBox2DPrismaticJoint.cpp  MOAIBox2DPulleyJoint.cpp  MOAIBox2DRevoluteJoint.cpp  MOAIBox2DRopeJoint.cpp  MOAIBox2DWeldJoint.cpp  MOAIBox2DWheelJoint.cpp  MOAIBox2DWorld.cpp  MOAICameraFitter2D.cpp  MOAICameraFitter2D.h  MOAICp.cpp  MOAICpDebugDraw.cpp  MOAICpSpace.cpp  MOAIDataBuffer.cpp  MOAIDebugLines.cpp  MOAIDeck2D.cpp  MOAIEnvironment.cpp  MOAIEnvironment.h  MOAIFileSystem.cpp  MOAIFileSystem.h  MOAIFrameBuffer.cpp  MOAIGfxDevice.cpp  MOAIGfxDevice.h  MOAIGfxQuadListDeck2D.cpp  MOAIGfxResource.cpp  MOAIGfxResource.h  MOAIGlyph.h  MOAIGrid.cpp  MOAIGrid.h  MOAIGridSpace.cpp  MOAIHashWriter.cpp  MOAIHttpTask.h  (+55 more)
src/moaicore/shaders/: MOAIDeck2DShader-vsh.h
src/moaiext-android/: MOAIAppAndroid.cpp  MOAIAppAndroid.h  MOAIChartBoost.cpp  MOAIChartBoost.h  MOAIKeyboardAndroid.cpp  moaiext-android.h
src/moaiext-fmod/: MOAIFmod.cpp  MOAIFmod.h  MOAIFmodChannel.cpp  MOAIFmodChannel.h  MOAIFmodSound.cpp  MOAIFmodSound.h
src/moaiext-iphone/: MOAIChartBoost.h  MOAIChartBoost.mm
src/uslscore/: STLString.h  USDeviceTime.h  USDeviceTime_posix.cpp  USHashWriterMD5.cpp  USHashWriterSHA1.cpp  USHashWriterSHA224.cpp  USHashWriterSHA256.cpp  USHashWriterSHA384.cpp  USHashWriterSHA512.cpp  USList.h  USXmlReader.cpp  USXmlReader.h  pch.h  uslscore.h
src/uslsext/: USColor.cpp  USHttpTask.cpp  USHttpTask.h  USHttpTaskInfo_curl.cpp  USHttpTaskInfo_curl.h  USHttpTaskInfo_nacl.cpp  USHttpTaskInfo_nacl.h  USHttpTask_impl.cpp  USSqlBinding.cpp  USSqlColumn.cpp  USSqlConnection.cpp  USSqlRecord.cpp  USSqlStatement.cpp  USSqlValue.cpp  USUrlMgr_curl.cpp  USUrlMgr_nacl.cpp  uslsext.cpp  uslsext.h
src/zipfs/: zipfs.c
src/zl-gfx/: zl_gfx_opengl.cpp
src/zlcore/: ZLDirectoryItr.cpp  pch.h
test/unit-tests/: testhelpers.lua
test/unit-tests/camerafitter2d/: main.lua
test/unit-tests/filesystem/: main.lua
test/unit-tests/grid/: main.lua
test/unit-tests/sim/: main.lua
test/unit-tests/transform/: main.lua
test/unit-tests/transformbase/: main.lua
vs2008/libcurl/: libcurl.vcproj
vs2008/luaext/: luaext.vcproj
vs2008/moaicore/: moaicore.vcproj
vs2008/moaiext-luaext/: moaiext-luaext.vcproj
vs2008/moaiext-test/: moaiext-test.vcproj
vs2008/physfs/: physfs.vcproj
vs2008/uslsext/: uslsext.vcproj
vs2010/moaicore/: moaicore.vcxproj  moaicore.vcxproj.filters
vs2010/moaiext-debugger/: moaiext-debugger.vcxproj
vs2010/uslsext/: uslsext.vcxproj  uslsext.vcxproj.filters
xcode/ios/Classes/: MoaiView.mm
xcode/ios/MoaiSample.xcodeproj/: project.pbxproj
xcode/libmoai/libmoai.xcodeproj/: project.pbxproj
xcode/libmoai/libmoai.xcodeproj/xcshareddata/xcschemes/: libmoai-ios-chartboost.xcscheme
xcode/osx/MoaiSample.xcodeproj/: project.pbxproj
